# mlx-deneme

./: CMakeLists.txt  a.out  main.c  map  wall.xpm
